Text attriputes added in String xml.

--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -72,7 +72,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:text="CANCEL"
+                android:text="@string/cancel"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/menu_title_size"
                 android:visibility="gone" />
@@ -86,7 +86,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/background_gradient"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:text="OK"
+                android:text="@string/oK"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/menu_title_size" />
         </LinearLayout>
