--- a/app/src/main/res/layout/assessment_status_new.xml
+++ b/app/src/main/res/layout/assessment_status_new.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
-            android:text="Assessment Status"
+            android:text="@string/assessment_Status"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="@dimen/_15sdp"
@@ -116,7 +116,7 @@
                             android:layout_marginLeft="@dimen/margin_left_20dp"
                             android:layout_marginTop="@dimen/padding"
                             android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Tax Type"
+                            android:text="@string/tax_Type"
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/_15sdp"
                             android:visibility="visible"
@@ -175,7 +175,7 @@
                             android:layout_marginLeft="@dimen/margin_left_20dp"
                             android:layout_marginTop="@dimen/padding"
                             android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Assessment Id"
+                            android:text="@string/assessment_Id"
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/_15sdp"
                             android:visibility="visible" />
@@ -245,7 +245,7 @@
                             android:layout_height="wrap_content"
                             android:visibility="visible"
                             android:layout_centerHorizontal="true"
-                            android:text="Assessment Status"
+                            android:text="@string/assessment_Status"
                             android:layout_centerVertical="true"
                             android:textAlignment="center"
                             android:layout_gravity="center"
@@ -291,7 +291,7 @@
             android:layout_marginTop="-35dp"
             android:visibility="visible"
             android:onClick="@{()-> activity.showDetails()}"
-            android:text="Submit"
+            android:text="@string/submit"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:textAllCaps="true"
