--- a/app/src/main/res/layout/app_update_dialog.xml
+++ b/app/src/main/res/layout/app_update_dialog.xml
@@ -53,7 +53,7 @@
             android:gravity="center"
             android:lineSpacingExtra="5dp"
             android:padding="@dimen/padding"
-            android:text="You need to update VP TAX"
+            android:text="@string/you_need_to_update_TP_TAX"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             style="@string/font_circular_medium" />
 
@@ -65,7 +65,7 @@
             android:gravity="center"
             android:lineSpacingExtra="5dp"
             android:padding="@dimen/padding"
-            android:text="This version of VP TAX is no longer supported. Please go to Official Site and install new version"
+            android:text="@string/version_msg"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             style="@string/font_normal" />
 
@@ -82,7 +82,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="@dimen/padding"
-                android:text="Cancel"
+                android:text="@string/cancel"
                 android:textColor="@android:color/black"
                 android:visibility="gone"
                 style="@string/font_normal" />
@@ -97,7 +97,7 @@
                 android:background="@drawable/button_background"
                 android:gravity="center"
                 android:padding="@dimen/padding"
-                android:text="UPDATE"
+                android:text="@string/update"
                 android:onClick="@{()->activity.showGooglePlay()}"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/menu_title_size"
