--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -81,7 +81,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:gravity="center_horizontal"
                     android:padding="3dp"
-                    android:text="@string/app_name_line"
+                    android:text="@string/app_name_line2"
                     android:textColor="@color/grey2"
                     android:textSize="17sp"
                     android:textStyle="bold"
