String.xml file changes

--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -124,7 +124,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Applicant Name"
+                                android:text="@string/applicant_Name"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -179,7 +179,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Applicant Name In Tamil"
+                                android:text="@string/applicant_Name_In_Tamil"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -233,7 +233,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Gender"
+                                android:text="@string/gender"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -293,7 +293,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Age"
+                                android:text="@string/age"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -349,7 +349,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Father/Husband Name"
+                                android:text="@string/father_Husband_Name"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -403,7 +403,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Father/Husband Name In Tamil"
+                                android:text="@string/father_Husband_Name_In_Tamil"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -459,7 +459,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Mobile No"
+                                android:text="@string/mobile_No"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -515,7 +515,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Email Id"
+                                android:text="@string/email_Id"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -568,7 +568,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Description In English"
+                                android:text="@string/description_In_English"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible" />
@@ -620,7 +620,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Description In Tamil"
+                                android:text="@string/description_In_Tamil"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible" />
@@ -682,7 +682,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Ward No"
+                                android:text="@string/ward_No"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -741,7 +741,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Street Name"
+                                android:text="@string/street_Name"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -801,7 +801,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="@dimen/padding"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Street Name"
+                                android:text="@string/street_Name"
                                 android:textColor="@color/black_grey"
                                 android:textSize="@dimen/_15sdp"
                                 android:visibility="visible"
@@ -854,7 +854,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Door No"
+                                android:text="@string/door_No"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -908,7 +908,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Licence Validity"
+                                android:text="@string/licence_Validity"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -968,7 +968,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Are you the Owner"
+                                android:text="@string/are_you_the_Owner"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1019,7 +1019,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Rental Lease Agreement"
+                                android:text="@string/rental_Lease_agreement"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1107,7 +1107,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Date"
+                                android:text="@string/date"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1193,7 +1193,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Trade Code"
+                                android:text="@string/trade_Code"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible" />
@@ -1276,7 +1276,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Licence Type"
+                                android:text="@string/licence_Type"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1335,7 +1335,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Annual Sale"
+                                android:text="@string/annual_Sale"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1394,7 +1394,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="@dimen/padding"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Licence Type"
+                                android:text="@string/licence_Type"
                                 android:textColor="@color/black_grey"
                                 android:textSize="@dimen/_15sdp"
                                 android:visibility="visible" />
@@ -1493,7 +1493,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Motor Available"
+                                android:text="@string/motor_Available"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1546,7 +1546,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Motor Range(in Horse Power)"
+                                android:text="@string/motor_Range_in_Horse_Power"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1608,7 +1608,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Generator Available"
+                                android:text="@string/generator_Available"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1678,7 +1678,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Generator Range(in Kilowatt)"
+                                android:text="@string/generator_Range_in_Kilowatt"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1739,7 +1739,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Professional Tax Paid"
+                                android:text="@string/professional_Tax_Paid"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1795,7 +1795,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Property Tax Paid"
+                                android:text="@string/property_Tax_Paid"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1849,7 +1849,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="property Tax Assessment Number"
+                                android:text="@string/property_Tax_Assessment_Number"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -1909,7 +1909,7 @@
                                 android:layout_marginLeft="@dimen/margin_left_20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="@dimen/margin_left_20dp"
-                                android:text="Remarks"
+                                android:text="@string/remarks"
                                 android:textColor="@color/black_grey"
                                 android:textSize="16sp"
                                 android:visibility="visible"
@@ -2088,7 +2088,7 @@
                                     android:layout_gravity="left"
                                     android:paddingLeft="5dp"
                                     android:paddingRight="5dp"
-                                    android:text="View Image"
+                                    android:text="@string/view_image"
                                     android:textColor="@android:color/black"
                                     android:textSize="16sp"
                                     android:textStyle="normal" />
@@ -2131,7 +2131,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:text="Previous"
+                    android:text="@string/previous"
                     android:layout_gravity="start"
                     android:textSize="16sp"
                     android:layout_marginLeft="@dimen/_10sdp"
@@ -2144,7 +2144,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:text="Next"
+                    android:text="@string/next"
                     android:textSize="16sp"
                     android:layout_gravity="end"
                     android:layout_marginRight="@dimen/_10sdp"
@@ -2187,7 +2187,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:text="Document"
+                    android:text="@string/document"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_15sdp"
